GuaParser.py
# Generated from Gua.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class GuaParser ( Parser ):

    grammarFileName = "Gua.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'.'", "'('", "')'", "'{'", "'}'", 
                     "';'", "'+='", "'-='", "'*='", "'/='", "'*'", "'/'", 
                     "'%'", "'+'", "'-'", "'<<'", "'>>'", "'&'", "'~'", 
                     "'|'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
                     "'and'", "'or'", "'['", "','", "']'", "':'", "'var'", 
                     "'con'", "'this'", "'class'", "'if'", "'else'", "'while'", 
                     "'for'", "'break'", "'continue'", "'function'", "'return'", 
                     "'null'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "VAR", "CON", "THIS", "CLASS", 
                      "IF", "ELSE", "WHILE", "FOR", "BREAK", "CONTINUE", 
                      "FUNCTION", "RETURN", "NULL", "FLOAT", "INT", "BOOL", 
                      "STRING", "IDENTIFIER", "SPACE", "COMMENT" ]

    RULE_block = 0
    RULE_statement = 1
    RULE_returnStatement = 2
    RULE_elseIfClause = 3
    RULE_forInitClause = 4
    RULE_forAssignClause = 5
    RULE_expression = 6
    RULE_mapItem = 7
    RULE_functionCallItem = 8
    RULE_methodCallItem = 9
    RULE_clainItem = 10
    RULE_formalParameters = 11
    RULE_actualParameters = 12

    ruleNames =  [ "block", "statement", "returnStatement", "elseIfClause", 
                   "forInitClause", "forAssignClause", "expression", "mapItem", 
                   "functionCallItem", "methodCallItem", "clainItem", "formalParameters", 
                   "actualParameters" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    VAR=34
    CON=35
    THIS=36
    CLASS=37
    IF=38
    ELSE=39
    WHILE=40
    FOR=41
    BREAK=42
    CONTINUE=43
    FUNCTION=44
    RETURN=45
    NULL=46
    FLOAT=47
    INT=48
    BOOL=49
    STRING=50
    IDENTIFIER=51
    SPACE=52
    COMMENT=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuaParser.StatementContext)
            else:
                return self.getTypedRuleContext(GuaParser.StatementContext,i)


        def returnStatement(self):
            return self.getTypedRuleContext(GuaParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return GuaParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = GuaParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GuaParser.VAR) | (1 << GuaParser.CON) | (1 << GuaParser.THIS) | (1 << GuaParser.CLASS) | (1 << GuaParser.IF) | (1 << GuaParser.WHILE) | (1 << GuaParser.FOR) | (1 << GuaParser.BREAK) | (1 << GuaParser.CONTINUE) | (1 << GuaParser.IDENTIFIER))) != 0):
                self.state = 26
                self.statement()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GuaParser.RETURN:
                self.state = 32
                self.returnStatement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GuaParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LabelStatementMethodCallContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def methodCallItem(self):
            return self.getTypedRuleContext(GuaParser.MethodCallItemContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementMethodCall" ):
                return visitor.visitLabelStatementMethodCall(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementConstContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CON(self):
            return self.getToken(GuaParser.CON, 0)
        def IDENTIFIER(self):
            return self.getToken(GuaParser.IDENTIFIER, 0)
        def expression(self):
            return self.getTypedRuleContext(GuaParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementConst" ):
                return visitor.visitLabelStatementConst(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementAssignThisFieldContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def THIS(self):
            return self.getToken(GuaParser.THIS, 0)
        def IDENTIFIER(self):
            return self.getToken(GuaParser.IDENTIFIER, 0)
        def expression(self):
            return self.getTypedRuleContext(GuaParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementAssignThisField" ):
                return visitor.visitLabelStatementAssignThisField(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementForContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FOR(self):
            return self.getToken(GuaParser.FOR, 0)
        def forInitClause(self):
            return self.getTypedRuleContext(GuaParser.ForInitClauseContext,0)

        def expression(self):
            return self.getTypedRuleContext(GuaParser.ExpressionContext,0)

        def forAssignClause(self):
            return self.getTypedRuleContext(GuaParser.ForAssignClauseContext,0)

        def block(self):
            return self.getTypedRuleContext(GuaParser.BlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementFor" ):
                return visitor.visitLabelStatementFor(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementFunctionContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CON(self):
            return self.getToken(GuaParser.CON, 0)
        def IDENTIFIER(self):
            return self.getToken(GuaParser.IDENTIFIER, 0)
        def FUNCTION(self):
            return self.getToken(GuaParser.FUNCTION, 0)
        def formalParameters(self):
            return self.getTypedRuleContext(GuaParser.FormalParametersContext,0)

        def block(self):
            return self.getTypedRuleContext(GuaParser.BlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementFunction" ):
                return visitor.visitLabelStatementFunction(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementDefinitionContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(GuaParser.VAR, 0)
        def IDENTIFIER(self):
            return self.getToken(GuaParser.IDENTIFIER, 0)
        def expression(self):
            return self.getTypedRuleContext(GuaParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementDefinition" ):
                return visitor.visitLabelStatementDefinition(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementIfContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(GuaParser.IF, 0)
        def expression(self):
            return self.getTypedRuleContext(GuaParser.ExpressionContext,0)

        def block(self):
            return self.getTypedRuleContext(GuaParser.BlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementIf" ):
                return visitor.visitLabelStatementIf(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementClassContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CON(self):
            return self.getToken(GuaParser.CON, 0)
        def IDENTIFIER(self):
            return self.getToken(GuaParser.IDENTIFIER, 0)
        def CLASS(self):
            return self.getToken(GuaParser.CLASS, 0)
        def formalParameters(self):
            return self.getTypedRuleContext(GuaParser.FormalParametersContext,0)

        def block(self):
            return self.getTypedRuleContext(GuaParser.BlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementClass" ):
                return visitor.visitLabelStatementClass(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementClassFunctionContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CON(self):
            return self.getToken(GuaParser.CON, 0)
        def CLASS(self):
            return self.getToken(GuaParser.CLASS, 0)
        def IDENTIFIER(self):
            return self.getToken(GuaParser.IDENTIFIER, 0)
        def FUNCTION(self):
            return self.getToken(GuaParser.FUNCTION, 0)
        def formalParameters(self):
            return self.getTypedRuleContext(GuaParser.FormalParametersContext,0)

        def block(self):
            return self.getTypedRuleContext(GuaParser.BlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementClassFunction" ):
                return visitor.visitLabelStatementClassFunction(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementContinueContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CONTINUE(self):
            return self.getToken(GuaParser.CONTINUE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementContinue" ):
                return visitor.visitLabelStatementContinue(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementClassConstContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CON(self):
            return self.getToken(GuaParser.CON, 0)
        def CLASS(self):
            return self.getToken(GuaParser.CLASS, 0)
        def IDENTIFIER(self):
            return self.getToken(GuaParser.IDENTIFIER, 0)
        def expression(self):
            return self.getTypedRuleContext(GuaParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementClassConst" ):
                return visitor.visitLabelStatementClassConst(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementMethodCallChainContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def methodCallItem(self):
            return self.getTypedRuleContext(GuaParser.MethodCallItemContext,0)

        def clainItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuaParser.ClainItemContext)
            else:
                return self.getTypedRuleContext(GuaParser.ClainItemContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementMethodCallChain" ):
                return visitor.visitLabelStatementMethodCallChain(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementAssignFieldContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(GuaParser.IDENTIFIER)
            else:
                return self.getToken(GuaParser.IDENTIFIER, i)
        def expression(self):
            return self.getTypedRuleContext(GuaParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementAssignField" ):
                return visitor.visitLabelStatementAssignField(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementThisDefinitionContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(GuaParser.VAR, 0)
        def THIS(self):
            return self.getToken(GuaParser.THIS, 0)
        def IDENTIFIER(self):
            return self.getToken(GuaParser.IDENTIFIER, 0)
        def expression(self):
            return self.getTypedRuleContext(GuaParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementThisDefinition" ):
                return visitor.visitLabelStatementThisDefinition(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementThisConstContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CON(self):
            return self.getToken(GuaParser.CON, 0)
        def THIS(self):
            return self.getToken(GuaParser.THIS, 0)
        def IDENTIFIER(self):
            return self.getToken(GuaParser.IDENTIFIER, 0)
        def expression(self):
            return self.getTypedRuleContext(GuaParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementThisConst" ):
                return visitor.visitLabelStatementThisConst(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementBreakContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BREAK(self):
            return self.getToken(GuaParser.BREAK, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementBreak" ):
                return visitor.visitLabelStatementBreak(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementIfElseIfContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(GuaParser.IF, 0)
        def expression(self):
            return self.getTypedRuleContext(GuaParser.ExpressionContext,0)

        def block(self):
            return self.getTypedRuleContext(GuaParser.BlockContext,0)

        def elseIfClause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuaParser.ElseIfClauseContext)
            else:
                return self.getTypedRuleContext(GuaParser.ElseIfClauseContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementIfElseIf" ):
                return visitor.visitLabelStatementIfElseIf(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementClassDefinitionContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(GuaParser.VAR, 0)
        def CLASS(self):
            return self.getToken(GuaParser.CLASS, 0)
        def IDENTIFIER(self):
            return self.getToken(GuaParser.IDENTIFIER, 0)
        def expression(self):
            return self.getTypedRuleContext(GuaParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementClassDefinition" ):
                return visitor.visitLabelStatementClassDefinition(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementAssignVarContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(GuaParser.IDENTIFIER, 0)
        def expression(self):
            return self.getTypedRuleContext(GuaParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementAssignVar" ):
                return visitor.visitLabelStatementAssignVar(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementWhileContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(GuaParser.WHILE, 0)
        def expression(self):
            return self.getTypedRuleContext(GuaParser.ExpressionContext,0)

        def block(self):
            return self.getTypedRuleContext(GuaParser.BlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementWhile" ):
                return visitor.visitLabelStatementWhile(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementIfElseIfElseContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(GuaParser.IF, 0)
        def expression(self):
            return self.getTypedRuleContext(GuaParser.ExpressionContext,0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuaParser.BlockContext)
            else:
                return self.getTypedRuleContext(GuaParser.BlockContext,i)

        def ELSE(self):
            return self.getToken(GuaParser.ELSE, 0)
        def elseIfClause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuaParser.ElseIfClauseContext)
            else:
                return self.getTypedRuleContext(GuaParser.ElseIfClauseContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementIfElseIfElse" ):
                return visitor.visitLabelStatementIfElseIfElse(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementFunctionCallChainContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionCallItem(self):
            return self.getTypedRuleContext(GuaParser.FunctionCallItemContext,0)

        def clainItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuaParser.ClainItemContext)
            else:
                return self.getTypedRuleContext(GuaParser.ClainItemContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementFunctionCallChain" ):
                return visitor.visitLabelStatementFunctionCallChain(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementFunctionCallContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionCallItem(self):
            return self.getTypedRuleContext(GuaParser.FunctionCallItemContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementFunctionCall" ):
                return visitor.visitLabelStatementFunctionCall(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementIfElseContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(GuaParser.IF, 0)
        def expression(self):
            return self.getTypedRuleContext(GuaParser.ExpressionContext,0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuaParser.BlockContext)
            else:
                return self.getTypedRuleContext(GuaParser.BlockContext,i)

        def ELSE(self):
            return self.getToken(GuaParser.ELSE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementIfElse" ):
                return visitor.visitLabelStatementIfElse(self)
            else:
                return visitor.visitChildren(self)


    class LabelStatementAssignClassFieldContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuaParser.StatementContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def CLASS(self):
            return self.getToken(GuaParser.CLASS, 0)
        def IDENTIFIER(self):
            return self.getToken(GuaParser.IDENTIFIER, 0)
        def expression(self):
            return self.getTypedRuleContext(GuaParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatementAssignClassField" ):
                return visitor.visitLabelStatementAssignClassField(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = GuaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 207
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = GuaParser.LabelStatementDefinitionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                self.match(GuaParser.VAR)
                self.state = 36
                self.match(GuaParser.IDENTIFIER)
                self.state = 37
                self.match(GuaParser.T__0)
                self.state = 38
                self.expression(0)
                pass

            elif la_ == 2:
                localctx = GuaParser.LabelStatementConstContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.match(GuaParser.CON)
                self.state = 40
                self.match(GuaParser.IDENTIFIER)
                self.state = 41
                self.match(GuaParser.T__0)
                self.state = 42
                self.expression(0)
                pass

            elif la_ == 3:
                localctx = GuaParser.LabelStatementThisDefinitionContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 43
                self.match(GuaParser.VAR)
                self.state = 44
                self.match(GuaParser.THIS)
                self.state = 45
                self.match(GuaParser.T__1)
                self.state = 46
                self.match(GuaParser.IDENTIFIER)
                self.state = 47
                self.match(GuaParser.T__0)
                self.state = 48
                self.expression(0)
                pass

            elif la_ == 4:
                localctx = GuaParser.LabelStatementThisConstContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.match(GuaParser.CON)
                self.state = 50
                self.match(GuaParser.THIS)
                self.state = 51
                self.match(GuaParser.T__1)
                self.state = 52
                self.match(GuaParser.IDENTIFIER)
                self.state = 53
                self.match(GuaParser.T__0)
                self.state = 54
                self.expression(0)
                pass

            elif la_ == 5:
                localctx = GuaParser.LabelStatementClassDefinitionContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 55
                self.match(GuaParser.VAR)
                self.state = 56
                self.match(GuaParser.CLASS)
                self.state = 57
                self.match(GuaParser.T__1)
                self.state = 58
                self.match(GuaParser.IDENTIFIER)
                self.state = 59
                self.match(GuaParser.T__0)
                self.state = 60
                self.expression(0)
                pass

            elif la_ == 6:
                localctx = GuaParser.LabelStatementClassConstContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 61
                self.match(GuaParser.CON)
                self.state = 62
                self.match(GuaParser.CLASS)
                self.state = 63
                self.match(GuaParser.T__1)
                self.state = 64
                self.match(GuaParser.IDENTIFIER)
                self.state = 65
                self.match(GuaParser.T__0)
                self.state = 66
                self.expression(0)
                pass
